# celery-haystack

./: project.toml  pyproject.toml  setup.cfg
celery_haystack/: utils.py
